--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -19,11 +19,13 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:text=" test"
                 android:textSize="30dp"
                 android:textStyle="bold" />
+
         </LinearLayout>
     </ScrollView>
 
